Release Notes

* 2/25/2016
  * changed SiteSpec.isDirectIO to take direct_access_lan into account

* 2/23/2016
  * added getAssoicatedEndpoint to DdmSpec

* 2/22/2016
  * added allowWanInputAccess

* 2/19/2016
  * setting jobSubStatus to upstream jobs when merge is failed

* 2/18/2016
  * fixed getCriteria for groups without wildcards

* 2/17/2016
  * added getDispatchDatasetsPerUser

* 2/16/2016
  * using datasets.currentfiles to store dis size

* 2/15/2016
  * using 14days lifetime for panda rules
  * added altStgOut

* 2/12/2016
  * changed NucleusSpec to ignore SPECIAL
  * added protection against space_*=None
  * added softkill for ES preemption
  * using asynchronous rules for GEN dis

* 2/9/2016
  * added mode to reassignTaskTo*
  * added file check for assigned jobs
  * changed HC DN for glexec

* 2/8/2016
  * added esPreemption

* 2/4/2016
  * added nucleus and eventService to jobSpec

* 2/3/2016
  * changed retryTask so that failed jobs in pending/running/scouting tasks can be retried

* 2/1/2016
  * added reassignTaskToNucleus

* 1/29/2016
  * changed to allow satellites in destinationSE

* 1/28/2016
  * setting nucleus to destinationSE

* 1/27/2016
  * removed __str__ in DdmSpec

* 1/26/2016
  * added getDNsForS3
  * added protection not to change failed jobs to holding

* 1/25/2016
  * sending objStoreIDs for ES merge
  * added network configurator and corepower collection

* 1/19/2016
  * changed addMetaData to limit the size of json for failed jobs

* 1/18/2016
  * changed to update status of ES jobs when ES-merge is done
  * enabled a protection for transferring->holding and holding->holding with final heartbeats

* 1/12/2016
  * changed AdderAtlas for alternative stage-out
  * added objstoreID to updateEventRange
  * changed eventLookupClientEI to use new EI client

* 1/11/2016
  * changed killJob so that 51 goes forward even if commandToPilot was already set

* 1/5/2016
  * using DISK for prestaging

* 12/28/2015